# rknpu_rk3568

./: CMakeLists.txt  README.md  build-linux_RK3568.sh  performance.sh  rk3568.toolchain.cmake
docs/: project_reading_guide_zh.md  project_reading_guide_zh_01_overview.md  project_reading_guide_zh_02_main_and_pool.md  project_reading_guide_zh_03_backend.md  project_reading_guide_zh_04_input_display.md  project_reading_guide_zh_05_function_index.md  project_reading_guide_zh_06_class_and_method_guide.md  three_way_diff_and_architecture.md
include/: drm_display.h  frame_pools.h  mpp_decoder.h  mpp_encoder_rtsp.h  postprocess.h  preprocess.h  rkYolov5s.hpp  rknnPool.hpp  v4l2_capture.h
model/: yolov5n-640-640-rk3568.rknn
src/: drm_display.cc  main.cc  mpp_decoder.cc  mpp_encoder_rtsp.cc  postprocess.cc  preprocess.cc  rkYolov5s.cc  v4l2_capture.cc
